[gd_scene load_steps=7 format=3 uid="uid://cq1b40n46riyf"]

[ext_resource type="Script" uid="uid://dnibbsw1faota" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(1.05286e-08, 0.0658347, 0.0189109, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vue75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 12
shadow_size = 7
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.106242, 0.118976, 0.108568, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 12
shadow_size = 7
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 12
shadow_size = 7
shadow_offset = Vector2(0, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -70.0
offset_right = 88.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(84.5023, 68)
theme_override_constants/separation = 5

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "START"

[node name="opions" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "OPTIONS"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "EXIT"

[node name="vs" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "VS "

[node name="vsai" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "VS AI"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "BACK"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.5
offset_top = 97.0
offset_right = 95.5
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "PONG!"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/opions" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/vs" to="." method="_on_vs_pressed"]
[connection signal="pressed" from="VBoxContainer/vsai" to="." method="_on_vs_ai_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="back_pressed"]
